extract button class, extra bold font doesn't work in chrome

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>QR code Generator - Bolt</title>
 </head>
 
-<body class="">
+<body class="h-screen font-sans grid bg-trb-grey4 text-trb-black2">
     <header>
         <a href="#" class="header__logo">
             <svg width="147" height="39" class="logo">
@@ -50,13 +50,13 @@
         </nav>
     </header>
     <main>
-        <div class="hero hero-main wrapper wrapper-grid">
-            <div class="flow">
-                <h1 class="">Strikingly fast <span class="txt-accent">QR codes</span>.</h1>
-                <p>You are one Bolt away from never being too slow again</p>
-                <div class="wrapper-buttons">
-                    <a href="#" class="btn">Generate QR Codes</a>
-                    <a href="signup.html" class="btn btn--outline">Sign up</a>
+        <div class="">
+            <div class="">
+                <h1 class="font-heading-bold font-black text-5xl text-trb-orange3">Strikingly fast <span class="text-black">QR codes</span>.</h1>
+                <p class="text-sm text-trb-black3">You are one Bolt away from never being too slow again</p>
+                <div class="">
+                    <a href="#" class="button button--full">Generate QR Codes</a>
+                    <a href="signup.html" class="button button--outline">Sign up</a>
                 </div>
             </div>
             <div class="wrapper-illustration">
@@ -310,9 +310,9 @@
                         for you and your budget.</p>
                 </div>
                 <div class="wrapper-buttons-pricing">
-                    <button class="btn btn--square">Monthly</button>
-                    <button class="btn btn--outline btn--square">Annual</button>
-                    <button class="btn btn--outline btn--square">Lifetime</button>
+                    <button class="button button--full">Monthly</button>
+                    <button class="button button--outline">Annual</button>
+                    <button class="button button--outline">Lifetime</button>
                 </div>
             </div>
             <ul class="wrapper-horizontal">
@@ -335,7 +335,7 @@
                         <li><s>4 QR code types</s></li>
                         <li><s>4 QR code types</s></li>
                     </ul>
-                    <a href="signup.html" class="btn">Choose plan</a>
+                    <a href="signup.html" class="button button--full">Choose plan</a>
                 </li>
                 <li class="card card--pricing">
                     <div class="card__title">
@@ -356,7 +356,7 @@
                         <li>4 QR code types</li>
                         <li>4 QR code types</li>
                     </ul>
-                    <a href="signup.html" class="btn">Choose plan</a>
+                    <a href="signup.html" class="button button--full">Choose plan</a>
                 </li>
                 <li class="card card--pricing card--special">
                     <div class="card__title">
@@ -377,7 +377,7 @@
                         <li>4 QR code types</li>
                         <li>4 QR code types</li>
                     </ul>
-                    <a href="signup.html" class="btn">Choose plan</a>
+                    <a href="signup.html" class="button button--full">Choose plan</a>
                 </li>
                 <li class="card card--pricing">
                     <div class="card__title">
@@ -398,7 +398,7 @@
                         <li>4 QR code types</li>
                         <li>4 QR code types</li>
                     </ul>
-                    <a href="signup.html" class="btn">Choose plan</a>
+                    <a href="signup.html" class="button button--full">Choose plan</a>
                 </li>
             </ul>
 
