start main page layout

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     </style> -->
 </head>
 
-<body class="h-screen grid bg-trb-grey4 dark:bg-trb-black2 text-trb-black2 dark:text-trb-grey4">
-    <header class="flex flex-col justify-between p-6 md:flex-row md:items-center shadow-[0_1px_16px_rgba(255,120,0,0.2)] md:shadow-[0_2px_10px_rgba(45,45,45,0.1)] relative ">
+<body class="h-screen grid leading-normal bg-trb-grey4 dark:bg-trb-black2 text-trb-black2 dark:text-trb-grey4">
+    <header
+        class="flex flex-col justify-between p-6 md:flex-row md:items-center shadow-[0_1px_16px_rgba(255,120,0,0.2)] md:shadow-[0_2px_10px_rgba(45,45,45,0.1)] relative ">
         <a href="#">
             <svg width="147" height="39" class="w-[87px] md:w-auto">
                 <use href="/public/img/bolt-logo.svg#bolt"></use>
@@ -70,25 +71,25 @@
             <!-- end -->
         </nav>
     </header>
-    <main class="">
-        <div class="">
-            <div class="">
-                <h1 class="font-heading-bold font-black text-5xl text-trb-orange3">Strikingly fast <span
-                        class="text-black">QR codes</span>.</h1>
-                <p class="text-sm text-trb-black3">You are one Bolt away from never being too slow again</p>
-                <div class="">
-                    <a href="#" class="button button--full">Generate QR Codes</a>
-                    <a href="signup.html" class="button button--outline">Sign up</a>
+    <main>
+        <div class="max-w-screen-xl mx-auto pt-8 pb-12 px-[2.5%] md:py-20 grid items-center gap-8 md:grid-cols-2">
+            <div class="[&>*+*]:mt-6 max-w-[420px] xl:max-w-[63ch]">
+                <h1 class="font-heading-bold font-black text-5xl xl:text-7xl leading-snug xl:leading-normal text-trb-orange3 dark:text-trb-orange1">Strikingly fast <span
+                        class="text-black dark:text-white">QR codes</span>.</h1>
+                <p class="text-sm xl:text-lg text-trb-black3 dark:text-trb-grey3">You are one Bolt away from never being too slow again</p>
+                <div class="grid gap-6 lg:grid-cols-2">
+                    <a href="#" class="button button--full w-full max-w-[198px]">Generate QR Codes</a>
+                    <a href="signup.html" class="button button--outline w-full max-w-[198px]">Sign up</a>
                 </div>
             </div>
-            <div class="wrapper-illustration">
+            <div class="relative after:absolute after:top-0 after:bottom-0 after:left-0 after:right-0 after:bg-trb-orange1 after:mix-blend-hue">
                 <img src="public/img/home/qr-code-purchase.png" alt="illustration of a man scanning qr code on a bottle"
-                    width="600" height="600">
+                    width="600" height="600" class="w-full max-w-[217px] md:max-w-[382px] xl:max-w-none dark:invert">
             </div>
             <!-- widths 217, 382, 600 -->
         </div>
         <section id="generator">
-            <div class="wrapper flow">
+            <div class="max-w-screen-xl mx-auto pt-8 pb-12 px-[2.5%] md:py-20 flow">
                 <div class="flow--small">
                     <h2 class="">QR code Generator.</h2>
                     <p>Your not sure whether to use Dynamic or Static QR codes? Get familiar with both and choose
@@ -123,7 +124,7 @@
                     <iframe width="660" height="393" src="https://www.youtube.com/embed/VWvkhPFKSxY" loading="lazy"
                         title="YouTube video player"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
+                        allowfullscreen class="w-full max-w-[344px] md:max-w-[475px] xl:max-w-none rounded-2xl"></iframe>
                 </div>
                 <div class="wrapper-generator">
                     <div class="flow--small">
@@ -144,15 +145,15 @@
                             <li>No data saved on our servers</li>
                         </ul>
                     </div>
-                    <iframe width="660" height="393" class="justify-right"
-                        src="https://www.youtube.com/embed/VWvkhPFKSxY" loading="lazy" title="YouTube video player"
+                    <iframe width="660" height="393" src="https://www.youtube.com/embed/VWvkhPFKSxY" loading="lazy"
+                        title="YouTube video player"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
+                        allowfullscreen class="w-full max-w-[344px] md:max-w-[475px] xl:max-w-none rounded-2xl"></iframe>
                 </div>
             </div>
         </section>
         <section id="features" class="flow">
-            <div class="wrapper flow">
+            <div class="max-w-screen-xl mx-auto pt-8 pb-12 px-[2.5%] md:py-20 flow">
                 <div class="flow--small">
                     <h2>With other features</h2>
                     <p>From QR code templates to custom domains, Bolt offers you all the features that you might need.
@@ -192,7 +193,7 @@
             </div>
         </section>
         <section id="types">
-            <div class="wrapper flow">
+            <div class="max-w-screen-xl mx-auto pt-8 pb-12 px-[2.5%] md:py-20 flow">
                 <div class="flow--small">
                     <h2>QR code types.</h2>
                     <p>QR codes can be used for multiple purposes! So here you have a large array of QR code templates
@@ -322,7 +323,7 @@
             </div>
         </section>
         <section id="pricing">
-            <div class="wrapper flow">
+            <div class="max-w-screen-xl mx-auto pt-8 pb-12 px-[2.5%] md:py-20 flow">
                 <div class="flow--small">
                     <h2>Simple, transparent pricing.</h2>
                     <p>Not sure if you need Bolt? You can sign up for your free guest account to try Bolt out.</p>
