inner pages layout

--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
         </nav>
     </header>
     <main>
-        <div class="max-w-screen-xl mx-auto pt-8 pb-12 px-[2.5%] md:py-20 grid items-center gap-8 md:grid-cols-2">
+        <div class="max-w-screen-xl mx-auto pt-8 pb-12 px-[2.5%] xl:py-20 grid items-center gap-8 md:grid-cols-2">
             <div class="[&>*+*]:mt-6 max-w-[420px] xl:max-w-[63ch]">
                 <h1 class="font-heading-bold font-black text-5xl xl:text-7xl leading-snug xl:leading-normal text-trb-orange3 dark:text-trb-orange1">Strikingly fast <span
                         class="text-black dark:text-white">QR codes</span>.</h1>
                 <p class="text-sm xl:text-lg text-trb-black3 dark:text-trb-grey3">You are one Bolt away from never being too slow again</p>
                 <div class="grid gap-6 lg:grid-cols-2">
-                    <a href="#" class="button button--full w-full max-w-[198px]">Generate QR Codes</a>
-                    <a href="signup.html" class="button button--outline w-full max-w-[198px]">Sign up</a>
+                    <a href="#" class="button button--full">Generate QR Codes</a>
+                    <a href="signup.html" class="button button--outline">Sign up</a>
                 </div>
             </div>
             <div class="relative after:absolute after:top-0 after:bottom-0 after:left-0 after:right-0 after:bg-trb-orange1 after:mix-blend-hue">
