--- a/signup.html
+++ b/signup.html
@@ -68,13 +68,13 @@
 
 
   <main class="max-w-screen-xl mx-auto pt-8 pb-12 px-[2.5%] md:py-20">
-    <div class="hero wrapper-grid flow">
-      <div class="wrapper-input">
-        <div class="flow--small">
-          <h1 class="h2 txt-orange">Sign up.</h1>
-          <p>Welcome to Bolt account creation. Enjoy all the benefits it offers.</p>
+    <div class="w-full max-w-4xl xl:max-w-7xl grid items-center gap-8 md:grid-cols-2 [&>*+*]:mt-6">
+      <div class="max-w-md">
+        <div class="[&>*+*]:mt-2">
+          <h1 class="text-4xl xl:text-5xl font-heading-bold font-black text-trb-orange3 dark:text-trb-orange1">Sign up.</h1>
+          <p class="text-sm xl:text-lg max-w-[45ch] text-trb-black3 dark:text-trb-grey3">Welcome to Bolt account creation. Enjoy all the benefits it offers.</p>
         </div>
-        <form action="" class="flow form-signup" novalidate>
+        <form action="" class="grid mt-6 mb-8 [&>*+*]:mt-6" novalidate>
           <label for="name"><span class="sr-only">Name</span><input type="text" id="name"
               placeholder="Your name*"></label>
           <label for="email"><span class="sr-only">Email</span><input type="email" id="email"
@@ -84,9 +84,9 @@
           <label for="terms" class="label-checkbox"><input type="checkbox" id="terms" class="checkbox" required>Please confirm that you
             have read and understood
             the Terms and Conditions and Privacy Policy of the site.*</label>
-          <button type="submit">Create account</button>
+          <button type="submit" class="button button--full">Create account</button>
         </form>
-        <p>If you all ready have account, please <span class="txt-orange"><a href="login.html">Log in</a></span></p>
+        <p>If you all ready have account, please <span class="text-trb-orange3 dark:text-trb-orange1 hover:text-trb-orange1 dark:hover:text-trb-orange3"><a href="login.html">Log in</a></span></p>
       </div>
     <div class="relative after:absolute after:top-0 after:bottom-0 after:left-0 after:right-0 after:bg-trb-orange1 after:mix-blend-hue">
       <img src="public/img/signup/sign-up-illustration.png" alt="illustration of a man with jetpacks flying to the sky"
